# rust-arenaclient

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
rust_ac/: __init__.py  __main__.py  bot.py  game_config.py  match_runner.py  requirements.txt  result.py  server.py  supervisor.py
src/: build_info.rs  client.rs  controller.rs  lib.rs  main.rs  maps.rs  paths.rs  portconfig.rs  proxy.rs  result.rs  sc2.rs  sc2process.rs  server.rs
src/config/: mod.rs  race.rs
src/errors/: mod.rs  proxy_error.rs
src/game/: game.rs  lobby.rs  messaging.rs  mod.rs  player.rs
src/handler/: game.rs  lobby.rs  messaging.rs  mod.rs  player.rs
