[package]
name = "rust-arenaclient"
version = "0.1.16"
authors = ["Daniel <danielvanschoor1997@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_ac"
crate-type = ["cdylib"]

[[bin]]
name = "rust_ac_bin"
path = "src/main.rs"

[package.metadata.maturin]
requires-dist = ["portpicker", "aiohttp"]


[dependencies]
sc2-proto = { git = "https://github.com/UltraMachine/sc2-proto-rs.git" }
protobuf = { version = "2.17.0", features = ["with-bytes"] }
log = "0.4"
shellexpand = "2.0"
regex = "1.1.0"
portpicker  = { git = "https://github.com/aiarena/portpicker-rs" }
tempfile = "3"
crossbeam = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.1"
csv = "1.1.3"
pyo3-log = "0.2.0"

[dependencies.websocket]
git = "https://github.com/aiarena/rust-websocket"
default-features = false
features = ["sync"]

[dependencies.pyo3]
version = "0.12.0"


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]


[profile.release]
opt-level = 3
debug=false
panic="abort"
lto = "fat"
codegen-units = 1

