[package]
name = "rust-arenaclient"
version = "0.2.4"
authors = ["Daniel <danielvanschoor1997@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_ac"
crate-type = ["cdylib", 'rlib']

[[bin]]
name = "rust_ac_bin"
path = "src/main.rs"

[package.metadata.maturin]
requires-dist = ["portpicker", "aiohttp"]


[dependencies]
sc2-proto = { git = "https://github.com/aiarena/sc2-proto-rs.git" }
protobuf = { version = "=3.2.0", features = ["with-bytes"] }
log = "^0.4.13"
env_logger = "0.9.0"
shellexpand = "^2.1.0"
regex = "^1.4.3"
portpicker = { git = "https://github.com/aiarena/portpicker-rs" }
tempfile = "3.1.0"
crossbeam = "^0.8.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
bincode = { version = "^1.3.1", optional = true }
csv = "1.1.3"
pyo3-log = { version= "0.8.0", optional=true }
tokio = { version = "1.19.0", features = ["time","macros","rt","rt-multi-thread"] }
futures-util = "0.3.21"
anyhow = "1.0.58"
chrono = "0.4.22"

[dependencies.tokio-tungstenite]
version = "0.17.2"

[dependencies.pyo3]
version = "0.17.3"
optional = true
features = ["auto-initialize"]

[features]
extension-module = ["bincode", "pyo3", "pyo3-log", "pyo3/extension-module"]
default = ["extension-module"]
no-pyo3 = []
build = ["bincode", "pyo3", "pyo3-log"]



[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1

